# smart-router

./: .gitignore  Dockerfile  README.md  pyproject.toml
smart-router/: appserver.py  logger.py  main.py
smart-router/config/: __init__.py  policy.py  smart_router.py  worker.py
smart-router/metrics/: metrics_collector.py
smart-router/policies/: __init__.py  consistent_hash.py  minimum_load.py  policy.py  power_of_two.py  prefix_aware.py  round_robin.py
smart-router/router/: __init__.py  base.py  service_discovery_router.py  sglang_pd_router.py  vllm_pd_router.py
smart-router/worker/: __init__.py  basic_worker.py  core.py  dp_aware_worker.py  worker_registry.py
smart_router/: __main__.py  cli.py  logger.py
smart_router/config/: __init__.py  smart_router.py  utils.py
smart_router/engine/: engine.py  engine_client.py  utils.py  vllm_engine.py
smart_router/entrypoints/benchmark/: __main__.py  bench_dataset.py  benchmark_serving_multi_turn.py  run_multi_turns_generate.sh
smart_router/entrypoints/serve/: __main__.py  api_server.py  vllm_routes.py
smart_router/metrics/: metrics_collector.py
smart_router/policies/: __init__.py  consistent_hash.py  minimum_load.py  policy.py  power_of_two.py  prefix_aware.py  prefix_tree.py  round_robin.py
smart_router/worker/: __init__.py  basic_worker.py  core.py  dp_aware_worker.py  worker_registry.py
tests/: test_api_server_models.py  test_cli.py  test_engine.py  test_models_route.py  test_vllm_routes_pd.py
